padding overlapping, fix error

--- a/Public/css/basicLayout.css
+++ b/Public/css/basicLayout.css
@@ -132,7 +132,7 @@ body {
 
 #notesbutton {
   position: absolute;
-  bottom: 30px;
+  bottom: 40px;
 }
 
 .container {
